polishing the docs

--- a/spring-cloud-task-app-starters-docs/src/main/asciidoc/overview.adoc
+++ b/spring-cloud-task-app-starters-docs/src/main/asciidoc/overview.adoc
@@ -1,5 +1,5 @@
 [[overview]]
-== Spring Cloud Stream Starters
+== Spring Cloud Task Starters
 
 This section goes into more detail about how you can work with Spring Cloud Task Starters as standalone applications or with Spring Cloud Data Flow.
 
