--- a/spring-cloud-task-app-starters-docs/src/main/asciidoc/overview.adoc
+++ b/spring-cloud-task-app-starters-docs/src/main/asciidoc/overview.adoc
@@ -153,7 +153,7 @@ public class TimestampTaskApplication {
 
 After doing so, you can simply add the additional configuration for the extra features of your application.
 
-=== Developing custom task applications and generating artifacts using the existing tooling
+=== Contributing Task Application Starters
 
 In this section, we will explain how to develop a custom task application and then generate
 maven and docker artifacts for it using the existing tooling provided by the
@@ -162,13 +162,12 @@ task application for a technology named foobar.
 
 * Create a new top level module named spring-cloud-starter-task-foobar
 
-Please follow the instructions above for designing a proper Spring Cloud Task starter. You may also look into the existing
-starters for how to structure a new one. Ensure that you name the main `@Configuration` class of your starter as
-`FoobarTaskConfiguration` as this is the default convention used by the app generation later. Please also make sure
-that the package for this `@Configuration` is `org.springfamework.cloud.task.app.foobar`. If you have a different
-class/package name, see below for how to override that in the app generator. The functionality name for which you create
-a starter can be a hyphenated stream of strings such as in `spark-client` which can be found in the
-module `spring-cloud-starter-task-spark-client`.
+Please look into the existing starters for how to design and structure a new one. Ensure that you name the
+main `@Configuration` class of your starter as `FoobarTaskConfiguration` as this is the default convention used by
+the app generation later. The default package for the class with `@Configuration` is `org.springfamework.cloud.task.app.foobar`.
+If you have a different class/package name, see below for how to override that in the app generator.
+The technology name for which the app starter is created can be a hyphenated stream of strings such as in `spark-client`
+This starter module for this needs to be `spring-cloud-starter-task-spark-client`.
 
 The starters in `spring-cloud-task-app-starters` are slightly different from the other starters in spring-boot and
 spring-cloud in that here we don't provide a way to auto configure any configuration through spring factories mechanism.
@@ -205,8 +204,10 @@ dependecy management section. For example,
 * At this point, you are ready to generate the spring boot app for foobar task. Go to the
 `spring-cloud-task-app-generator` module and start editing as below.
 
-If you have a very basic task starter, all you have to do is to add the following to the list of apps need to be
-generated in the `generatedApps` tag of the configuration section of `spring-cloud-stream-app-maven` plugin.
+The minimal configuration needed to generate the app is to add to plugin configuration in
+spring-cloud-task-app-generator/pom.xml. There are other plugin options that customize the generated applications
+which are described in the plugin documentation (https://github.com/spring-cloud/spring-cloud-stream-app-maven-plugin).
+A few plugin features are described below.
 
 [source,xml]
 ----
@@ -234,7 +235,7 @@ this is how you can tell the plugin to override the default.
 
 * Go to the root of the repository and execute the script: `./generateApps.sh`
 
-This would generate the foobar task app in a directory named `apps` at the root of the repository.
+This will generate the foobar task app in a directory named `apps` at the root of the repository.
 If you want to change the location where the apps are generated, for instance /tmp/task-apps, you can do it in the
 configuration section of the plugin.
 
@@ -286,8 +287,8 @@ Here you will see `foobar-task` along with all the other out of the box apps tha
 
 If you only care about the foobar-task apps and nothing else, you can cd into that directory
 and import it directly into your IDE of choice. Each of them is a self contained spring boot application project.
-For all the generated apps, the parent is `spring-boot-starter-parent`. There is no way to change that around as ultimately these
-are spring boot based applications and that parent would bring many necessary spring components into your application.
+For all the generated apps, the parent is `spring-boot-starter-parent` as is required by Spring Initializr, the library
+used under the hood to generate the apps.
 
 You can cd into these custom foobar-task directories and do the following to build the apps:
 
@@ -297,7 +298,7 @@ You can cd into these custom foobar-task directories and do the following to bui
 
 This would install the foobar-task into your local maven cache (~/.m2 by default).
 
-The app generation phase above would add an integration test to the app project that is making sure that all the spring
+The app generation phase adds an integration test to the app project that ensures all the spring
 components and contexts are loaded properly. However, these tests are not run by default when you do a `mvn install`.
 You can force the running of these tests by doing the following:
 
@@ -315,13 +316,13 @@ following:
 
 `mvn clean package docker:build`
 
-This would create the docker image under the `target/docker/springcloudtask` directory. Please ensure that the Docker
+This creates the docker image under the `target/docker/springcloudtask` directory. Please ensure that the Docker
 container is up and running and DOCKER_HOST environment variable is properly set before you try `docker:build`.
 
-All the generated apps from the repository are uploaded to the docker hub at: https://hub.docker.com/u/springcloudtask/
+All the generated apps from the repository are uploaded to https://hub.docker.com/u/springcloudtask/[Docker Hub]
 
 However, for a custom app that you build, this won't be uploaded to docker hub under `springcloudtask` repository.
-If you think that there is a general need for this app, you should try contributing this starter to the main repository
+If you think that there is a general need for this app, you should contribute this starter to the main repository
 and upon review, this app then can be uploaded to the above location in docker hub.
 
 If you still need to push this to docker hub under a different repository you can take the following steps.
