--- a/spring-cloud-task-app-starters-docs/src/main/asciidoc/tasks.adoc
+++ b/spring-cloud-task-app-starters-docs/src/main/asciidoc/tasks.adoc
@@ -2,9 +2,13 @@
 
 :leveloffset: +1
 :app-starters-root:  https://raw.githubusercontent.com/spring-cloud/spring-cloud-task-app-starters/master
+:app-starters-root:  file:///Users/trisberg/Projects/trisberg/spring-cloud-task-app-starters
 
 
 [[spring-cloud-task-modules-spark-client]]
 include::{app-starters-root}/spring-cloud-starter-task-spark-client/README.adoc[tags=ref-doc]
+include::{app-starters-root}/spring-cloud-starter-task-spark-cluster/README.adoc[tags=ref-doc]
+include::{app-starters-root}/spring-cloud-starter-task-spark-yarn/README.adoc[tags=ref-doc]
+include::{app-starters-root}/spring-cloud-starter-task-timestamp/README.adoc[tags=ref-doc]
 
 :leveloffset: -1
