Update README with ANNOUCEMENT

--- a/README.adoc
+++ b/README.adoc
@@ -1,48 +1,7 @@
-== Spring Cloud Task App Starters image:https://build.spring.io/plugins/servlet/buildStatusImage/SCT-SCTAS[Build Status, link=https://build.spring.io/browse/SCT-SCTAS] image:https://badge.waffle.io/spring-cloud/spring-cloud-task-app-starters.svg?label=ready&title=Ready[Stories Ready, link=http://waffle.io/spring-cloud/spring-cloud-task-app-starters] image:https://badge.waffle.io/spring-cloud/spring-cloud-task-app-starters.svg?label=In%20Progress&title=In%20Progress[Stores In Progress, link=http://waffle.io/spring-cloud/spring-cloud-task-app-starters]
+== ANNOUNCEMENT: As of 1.1.0.GA / Addison.GA release, this project is now moved to link:https://github.com/spring-cloud-task-app-starters[spring-cloud-task-app-starters] organization and each of the Spring Cloud Task App Starters is now maintained in a separate repo by itself.
 
-This project provides a collection of starters for Spring Cloud Tasks for common cases.  They can be run on their own or orchestrated via Spring Cloud Data Flow.
+=== This change gives us the flexibility to bug-fix, update, and release individual applications independently as opposed to a time-consuming release of all the applications at once. The link:http://docs.spring.io/spring-cloud-task-app-starters/docs/[reference guide] for all the releases are still available from the same location, though.
 
-=== Building
-
-Clone the repo and type
-
-----
-$ ./mvnw clean install
-----
-
-*Quick Introduction*
-
-Spring Cloud Task App Starters contains starter projects for various tasks used in
-https://github.com/spring-cloud/spring-cloud-task[Spring Cloud Task].
-
-There is a convenient script provided to generate Spring Boot Applications for all the starters. These out of the box
-generated applications are very basic in functionality and thus you may want to create similar apps
-using the starters as a basis.
-
-NOTE: HdfsTextItemWriter implementation does not manage the state of the file like the FlatFileItemWriter does and therefore
-restarts may not work correctly (partial writes of a previous transaction are possible leaving the file in an
-inconsistent state).
-
-*Generating Out of the Box Tasks*
-
-----
-$ ./generateApps.sh
-
-$ cd apps
-
-$ mvn clean install
-
-Here you will find the auto generated apps.
-----
-
-NOTE: After running the ./generateApps.sh if the apps directory does not contain the pom.xml file. Remove the apps
-directory and rerun the `./generateApps.sh` script.
-
-For more information please refer to this
-https://github.com/spring-cloud/spring-cloud-task-app-starters/blob/master/spring-cloud-task-app-starters-docs/src/main/asciidoc/overview.adoc[overview].
-
-=== Integration Tests
-After executing the `mvn clean install` int the apps directory, execute the following from the main project directory:
-`mvn clean install -P integration-tests`
-
-
+=== This project will not be actively tracked going forward.
+- For any application specific issues, please find the respective repo under link:https://github.com/spring-cloud-task-app-starters[spring-cloud-task-app-starters] organization and report it there. 
+- For new feature requests, please use the common link:https://github.com/spring-cloud-task-app-starters/app-starters-release/issues[spring-cloud-task-app-starter/app-starters-release] project backlog.
