--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-== Spring Cloud Task App Starters image:https://build.spring.io/plugins/servlet/buildStatusImage/SCT-SCTAS[Build Status, link=https://build.spring.io/browse/SCT-SCTAS] image:https://badge.waffle.io/spring-cloud/spring-cloud-task-app-starters.svg?label=ready&title=Ready[Stories Ready, link=http://waffle.io/spring-cloud/spring-cloud-task-app-starters] image:https://badge.waffle.io/spring-cloud/spring-cloud-task-app-starters.svg?label=In%20Progress&title=In%20Progress[Stores In Progress, link=http://waffle.io/spring-cloud/spring-cloud-task-app-starters]
+== Spring Cloud Task App Starters image:https://build.spring.io/plugins/servlet/buildStatusImage/SCT-SCTAS[Build Status, link=https://build.spring.io/browse/SCT-SCTAS] image:https://badge.waffle.io/spring-cloud/spring-cloud-task-app-starters.svg?label=ready&title=Ready[Stories Ready, link=https://waffle.io/spring-cloud/spring-cloud-task-app-starters] image:https://badge.waffle.io/spring-cloud/spring-cloud-task-app-starters.svg?label=In%20Progress&title=In%20Progress[Stores In Progress, link=https://waffle.io/spring-cloud/spring-cloud-task-app-starters]
 
 This project provides a collection of starters for Spring Cloud Tasks for common cases.  They can be run on their own or orchestrated via Spring Cloud Data Flow.
 
