--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
+# spring-cloud-task-app-starters is no longer actively maintained by VMware, Inc.
+
 == ANNOUNCEMENT: As of 1.1.0.GA / Addison.GA release, this project is now moved to link:https://github.com/spring-cloud-task-app-starters[spring-cloud-task-app-starters] organization and each of the Spring Cloud Task App Starters is now maintained in a separate repo by itself.
 
 === This change gives us the flexibility to bug-fix, update, and release individual applications independently as opposed to a time-consuming release of all the applications at once. The link:https://docs.spring.io/spring-cloud-task-app-starters/docs/[reference guide] for all the releases are still available from the same location, though.
